--- a/serverless.yml
+++ b/serverless.yml
@@ -2,16 +2,53 @@ service: sls-project
 
 plugins:
   - serverless-esbuild
+  - serverless-dynamodb
   - serverless-offline
+
+custom:
+  tableName: sls-project-table
+  dynamodb:
+    stages:
+      - dev
+    start:
+      port: 8000
+      inMemory: true
+      migrate: true
+    migration:
+      dir: offline/migrations
 
 provider:
   name: aws
   runtime: nodejs18.x
+  stage: dev
+  environment:
+    tableName: ${self:custom.tableName}
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:*
+      Resource: '*'
 
 functions:
   hello:
-    handler: ./src/handler.hello
+    handler: src/handler.hello
     events:
       - httpApi:
           path: /
           method: GET
+
+resources:
+  Resources:
+    DynamoDbTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: ${self:custom.tableName}
+        AttributeDefinitions:
+          -
+            AttributeName: id
+            AttributeType: S
+        KeySchema:
+          -
+            AttributeName: id
+            KeyType: HASH
+        BillingMode: PAY_PER_REQUEST
