--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "sls-project",
   "author": "Kostiantyn Sakharov",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Serverless with serverless-offline, serverless-esbuild, typescript, dynamodb-local",
   "license": "MIT",
   "scripts": {
     "start": "serverless offline"
   },
   "dependencies": {
-    "serverless-dynamodb": "^0.2.54"
+    "express": "^4.21.0",
+    "serverless-dynamodb": "^0.2.54",
+    "serverless-http": "^3.2.0",
+    "uuid": "^2.0.3"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.119",
+    "@types/express": "^4.17.21",
     "@types/node": "^18.0.0",
+    "@types/uuid": "^10.0.0",
     "aws-sdk": "^2.12.0",
     "esbuild": "^0.17.19",
     "serverless": "^3.34.0",
