--- a/serverless.yml
+++ b/serverless.yml
@@ -31,11 +31,41 @@ provider:
 
 functions:
   hello:
-    handler: src/handler.hello
+    handler: src/index.handler
     events:
       - httpApi:
           path: /
           method: GET
+  create:
+    handler: src/index.handler
+    events:
+      - http:
+          path: users
+          method: POST
+  list:
+    handler: src/index.handler
+    events:
+      - http:
+          path: users
+          method: GET
+  get:
+    handler: src/index.handler
+    events:
+      - http:
+          path: users/{id}
+          method: GET
+  update:
+    handler: src/index.handler
+    events:
+      - http:
+          path: users/{id}
+          method: PUT
+  delete:
+    handler: src/index.handler
+    events:
+      - http:
+          path: users/{id}
+          method: DELETE
 
 resources:
   Resources:
