--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "sls-project",
   "author": "Kostiantyn Sakharov",
-  "version": "0.0.2",
-  "description": "Serverless with serverless-offline, serverless-esbuild, typescript, dynamodb-local",
+  "version": "0.0.3",
+  "description": "Serverless with serverless-offline, serverless-esbuild, typescript, serverless-dynamodb",
   "license": "MIT",
   "scripts": {
-    "start": "serverless offline"
+    "start": "sls offline start"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.650.0",
+    "@aws-sdk/lib-dynamodb": "^3.650.0",
+    "@aws-sdk/util-dynamodb": "^3.650.0",
     "express": "^4.21.0",
     "serverless-dynamodb": "^0.2.54",
     "serverless-http": "^3.2.0",
@@ -18,11 +21,11 @@
     "@types/express": "^4.17.21",
     "@types/node": "^18.0.0",
     "@types/uuid": "^10.0.0",
-    "aws-sdk": "^2.12.0",
     "esbuild": "^0.17.19",
-    "serverless": "^3.34.0",
+    "latest": "^0.2.0",
+    "serverless": "^3.39.0",
     "serverless-esbuild": "^1.46.0",
-    "serverless-offline": "^12.0.4",
+    "serverless-offline": "^13.8.0",
     "typescript": "^5.1.6"
   }
 }
