--- a/serverless.yml
+++ b/serverless.yml
@@ -30,42 +30,10 @@ provider:
       Resource: '*'
 
 functions:
-  hello:
+  proxy:
     handler: src/index.handler
     events:
-      - httpApi:
-          path: /
-          method: GET
-  create:
-    handler: src/index.handler
-    events:
-      - http:
-          path: users
-          method: POST
-  list:
-    handler: src/index.handler
-    events:
-      - http:
-          path: users
-          method: GET
-  get:
-    handler: src/index.handler
-    events:
-      - http:
-          path: users/{id}
-          method: GET
-  update:
-    handler: src/index.handler
-    events:
-      - http:
-          path: users/{id}
-          method: PUT
-  delete:
-    handler: src/index.handler
-    events:
-      - http:
-          path: users/{id}
-          method: DELETE
+      - httpApi: ANY /{proxy+}
 
 resources:
   Resources:
