--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "start": "sls offline start",
     "test": "jest",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "format": "prettier --write . --ignore-path .gitignore",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.650.0",
@@ -19,13 +22,16 @@
     "uuid": "^2.0.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
     "@types/aws-lambda": "^8.10.119",
+    "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
     "@types/node": "^18.0.0",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "esbuild": "^0.17.19",
+    "eslint": "^9.10.0",
     "jest": "^29.7.0",
     "latest": "^0.2.0",
     "serverless": "^3.39.0",
@@ -34,6 +40,7 @@
     "serverless-offline": "^13.8.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.1.6"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.6.0"
   }
 }
