--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 TABLE_NAME=sls-project-table
 AWS_ENDPOINT_URL_DYNAMODB=http://localhost:8000
+ACCESS_KEY_ID=MockAccessKeyId
+SECRET_ACCESS_KEY=MockSecretAccessKey
+AWS_REGION=localhost
