--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "sourceMap": true,
     "strict": true
   },
-  "include": ["src/**/*.ts", "tests/**/*.ts"],
+  "include": ["src/**/*.ts", "tests/**/*.ts"]
 }
