--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ AWS_ENDPOINT_URL_DYNAMODB=http://localhost:8000
 ACCESS_KEY_ID=MockAccessKeyId
 SECRET_ACCESS_KEY=MockSecretAccessKey
 AWS_REGION=localhost
+SERVICE_NAME=sls-project
+POWERTOOLS_LOG_LEVEL="INFO"
