--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint:fix": "eslint --fix"
   },
   "dependencies": {
+    "@aws-lambda-powertools/logger": "^2.8.0",
     "@aws-sdk/client-dynamodb": "^3.650.0",
     "@aws-sdk/lib-dynamodb": "^3.650.0",
     "@aws-sdk/util-dynamodb": "^3.650.0",
