feat: add gsi as env variable

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ SECRET_ACCESS_KEY=MockSecretAccessKey
 AWS_REGION=localhost
 SERVICE_NAME=sls-project
 POWERTOOLS_LOG_LEVEL="INFO"
+GLOBAL_SECONDARY_INDEX_NAME=EmailIndex
+GLOBAL_SECONDARY_ATTRIBUTE_NAME=email
