--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/client-dynamodb": "^3.650.0",
     "@aws-sdk/lib-dynamodb": "^3.650.0",
     "@aws-sdk/util-dynamodb": "^3.650.0",
+    "@middy/core": "^5.5.0",
     "express": "^4.21.0",
     "serverless-dynamodb": "^0.2.54",
     "serverless-http": "^3.2.0",
